crates/ars-components/src/overlay/toast/snapshots/ars_components__overlay__toast__manager__tests__manager_polite_region.snap
---
source: crates/ars-components/src/overlay/toast/manager.rs
expression: snapshot_attrs(&api.region_attrs(false))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-live",
            ),
            String(
                "polite",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "region",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toast",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Notifications",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Role,
            String(
                "status",
            ),
        ),
    ],
    styles: [],
}
