crates/ars-components/src/overlay/toast/snapshots/ars_components__overlay__toast__manager__tests__region_helper_assertive.snap
---
source: crates/ars-components/src/overlay/toast/manager.rs
expression: "snapshot_attrs(&region_attrs(&messages, &env.locale, RegionPart::Assertive))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-live",
            ),
            String(
                "assertive",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "region",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toast",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Notifications",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "assertive",
            ),
        ),
        (
            Role,
            String(
                "alert",
            ),
        ),
    ],
    styles: [],
}
